# game-deal-notifier-bot

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
.github/actions/setup-python/: action.yml
.github/actions/ty-check/: action.yml
.github/workflows/: mypy.yml  rest-api.yml  ruff.yml  telegram-bot.yml  ty.yml
rest_api/: .dockerignore  Dockerfile  pyproject.toml
rest_api/src/: app.py  config.py  main.py
rest_api/src/api/: app.py  django_setup.py
rest_api/src/api/isthereanydeal/: deals_list.py  giveaways.py
rest_api/src/api/utils/: pagination.py
rest_api/src/core/migrations/: 0001_initial.py  0005_notificationsubscription_last_seen_game_ids_and_more.py  0006_convert_notification_time_utc_to_local.py
rest_api/src/db_backend/: manage.py  settings.py  urls.py
rest_api/src/db_backend/core/: models.py
rest_api/src/db_backend/core/migrations/: 0002_job_notificationsubscription.py  0003_allowedchat_name.py  0004_rename_allowedchats_status_admin.py
rest_api/src/db_backend/db_backend/: asgi.py  settings.py  wsgi.py
rest_api/src/isthereanydeal/: deals_list.py  giveaways.py
telegram_bot/: pyproject.toml
telegram_bot/src/: config.py  main.py
telegram_bot/src/commands/: start.py
telegram_bot/src/commands/subscription/: __init__.py  job.py  subscribe.py  unsubscribe.py
telegram_bot/src/isthereanydeal/: giveaways.py
telegram_bot/src/utils/: get_next_time.py  validate_allowed_chats.py
